--- a/Pizza_Project/Pizza_CSS/Pizza.css
+++ b/Pizza_Project/Pizza_CSS/Pizza.css
@@ -5,7 +5,7 @@
 }
 
 #frmMenu {
-    width: 400px;
+    width: 600px;
     height: 200px;
 }
 
@@ -26,6 +26,12 @@
     width: 200px;
     height: 200px;
     float: right;
+}
+
+.middle {
+    width: 200px;
+    height: 200px;
+    float: left;
 }
 
 #showText {
